--- a/HtmlTranslateTest/HtmlTranslateTest.csproj
+++ b/HtmlTranslateTest/HtmlTranslateTest.csproj
@@ -36,6 +36,7 @@
       <HintPath>packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestClass.cs" />
